2007-11-20  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/atlasconv.h: Initialise age when setting up Quaternion from
	  Atlas data.

2007-07-20  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update date on release news item.

	* Release 0.3.6

2007-07-18  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number to 0.3.6

2007-07-18  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/axisbox.h, wfmath/axisbox_funcs.h, wfmath/ball.h,
	  wfmath/ball_funcs.h, wfmath/point.h, wfmath/point_funcs.h:
	  Tighten up template specicialisations to deal with stricter
	  rules in gcc 4.2.

2007-02-13  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/polygon_intersect.cpp, wfmath/polygon_intersect.h,
	  wfmath/rotmatrix_funcs.h: When an assert is used to detect
	  a bad condition in a function, ensure that in a production build
	  where asserts are disabled, the function still returns a sane
	  value, to avoid compiler warnings.

2006-08-18  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update date on release news item.

	* Release 0.3.5

2006-08-18  Al Riddoch  <alriddoch@zepler.org>

	* autogen.sh: Get rid of non-functional --enable-compile-warnings
	  flag, and enable debug by default when invoking configure from
	  autogen.

2006-08-17  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/Makefile.am: Remove useless AM_CXXFLAGS.

	* configure.ac: Straighten out interface version numbers, remove
	  unused substitutions, and add debug compiler flag support. Increment
	  version for release.

	* NEWS: Add provisional news item for release.

2006-08-17  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/point.h, wfmath/point_funcs.h, wfmath/quaternion.cpp,
	  wfmath/quaternion.h, wfmath/vector.h, wfmath/vector_funcs.h:
	  Re-order and reimplement some of the operators, so they
	  are more efficient and in some cases cleaner.

	* wfmath/quaternion_test.cpp: Output values for the results of
	  test calculations to make them easier to debug when they fail.
